<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.dobrinets.yourplusachievements.AchievesActivity">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="100" app:showAsAction="withText|always" />
    <item android:id="@+id/action_add_achieve"
        android:icon="@android:drawable/ic_menu_add" android:title="@string/action_add_achieve"
        android:orderInCategory="100" app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_stip"
        android:icon="@android:drawable/ic_menu_edit" android:title="@string/action_stip"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_set_server"
        android:icon="@android:drawable/ic_dialog_map" android:title="@string/action_set_server"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_lock_idle_lock" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="withText|never" />
</menu>
