<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AuthActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/lock"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/authText1"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView"
        android:id="@+id/tableLayout"
        android:layout_above="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/authText2"
                android:id="@+id/textView2"
                android:layout_above="@+id/passInput"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="48dp"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginInput"
                android:layout_weight="1"
                android:layout_alignBottom="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_row="0"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/authText3"
                android:id="@+id/textView3"
                android:layout_above="@+id/button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_row="1"
                android:layout_column="0" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passInput"
                android:layout_weight="1"
                android:layout_alignBaseline="@+id/loginInput"
                android:layout_alignBottom="@+id/loginInput"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignStart="@+id/imageView"
                android:layout_row="1"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authBtText"
                android:id="@+id/button"
                android:onClick="onBtnClick"
                android:layout_column="0"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_weight="100"
                android:layout_marginTop="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

</RelativeLayout>
